--- a/src/main.css
+++ b/src/main.css
@@ -371,13 +371,21 @@ section + form { margin-top: var(--default-padding); }
 
   font-size: 12px;
   font-size: 1.2rem;
+
+  background-color: var(--highlight-color);
 }
 
-.tag--yellow { background-color: var(--yellow); }
-.tag--red { background-color: var(--red); }
-.tag--purple { background-color: var(--purple); }
-.tag--blue { background-color: var(--blue); }
-.tag--green { background-color: var(--green); }
+.tag--yellow,
+.tags--special { background-color: var(--yellow); }
+.tag--red,
+.tag--html { background-color: var(--red); }
+.tag--purple,
+.tag--css { background-color: var(--purple); }
+.tag--blue,
+.tag--javascript,
+.tag--reactjs { background-color: var(--blue); }
+.tag--green,
+.tag--nodejs { background-color: var(--green); }
 
 /*=============================================
   #SYSTEM MESSAGE
