--- a/src/App/Section/section.css
+++ b/src/App/Section/section.css
@@ -1,10 +1,174 @@
+
+/*=============================================
+  #CARD CONTENT
+=============================================*/
+.info {
+
+}
+
+  .info__heading + .info__content { margin-top: var(--default-padding); }
+
+  .info__content {
+
+  }
+
+    .info__content p + p { margin-top: var(--small-padding); }
+
+/*=============================================
+  #SKILLS
+=============================================*/
+.skills {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  gap: var(--small-padding);
+}
+
+@media only screen and (min-width: 480px) {
+  .skills { grid-template-columns: repeat(2, 1fr); }
+}
+@media only screen and (min-width: 600px) {
+  .skills { grid-template-columns: repeat(3, 1fr); }
+}
+
+  .skill__item {
+
+  }
+
+    .skill__level { display: flex; }
+
+      .skill__level__indicator {
+        display: flex;
+        align-items: center;
+      }
+
+      .skill__level__percentage {
+        color: var(--primary-color);
+        margin-left: 6px;
+      }
+
+/*=============================================
+  #LISTS
+=============================================*/
+.generic-list {
+
+}
+
+* + .generic-list { margin-top: var(--default-padding); }
+
+.generic-list--help, 
+.generic-list--link { display: grid; }
+
+.generic-list--help { grid-template-columns: repeat(3, 1fr); }
+.generic-list--link { grid-template-columns: repeat(2, 150px); }
+
+@media only screen and (min-width: 480px) {
+  .generic-list--link { grid-template-columns: repeat(3, 1fr); }
+}
+
+  .list__item {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .list__item + .list__item {
+    margin-top: var(--default-padding);
+    padding-top: var(--default-padding);
+
+    border-top: 2px dashed var(--comment-color);
+  }
+
+  .generic-list--help .list__item + .list__item,
+  .generic-list--link .list__item + .list__item {
+    margin-top: 4px;
+    padding-top: 0;
+    border: none;
+  }
+
+  .generic-list--link .list__item + .list__item {
+    margin: 0;
+  }
+
+    .list__item a {
+      color: var(--pink);
+      text-decoration: none;
+    }
+
+      .list__item a h3 { font-weight: 700; }
+
+      .list__item h3 {
+        font-size: var(--mobile-font-size-px);
+        font-size: var(--mobile-font-size-rem);
+        font-weight: 500;
+
+        width: 100%;
+      }
+
+      .generic-list--help .list__item h3,
+      .generic-list--link .list__item h3 {
+        font-weight: 600;
+      }
+
+      .generic-list--help .list__item h3 {
+        color: var(--pink);
+      }
+
+      .generic-list--link .list__item h3 {
+        color: var(--pink);
+      }
+
+        .list__item h3 > span {
+          font-weight: 500;
+          color: var(--text-color);
+        }
+
+        .list__item__tags {
+          display: flex;
+          align-items: center;
+          flex-wrap: wrap;
+
+          gap: 10px;
+          
+          margin-top: var(--small-padding);
+        }
+/*=============================================
+  #TAGS
+=============================================*/
+.tag {
+  padding: 4px 8px;
+  
+  color: var(--background-color);
+  text-transform: uppercase;
+  font-weight: 600;
+
+  font-size: 12px;
+  font-size: 1.2rem;
+
+  background-color: var(--highlight-color);
+}
+
+.tag--yellow,
+.tags--special { background-color: var(--yellow); }
+.tag--red,
+.tag--html { background-color: var(--red); }
+.tag--purple,
+.tag--css { background-color: var(--purple); }
+.tag--blue,
+.tag--javascript,
+.tag--reactjs { background-color: var(--blue); }
+.tag--green,
+.tag--nodejs { background-color: var(--green); }
+
+/*=============================================
+  #GITHUB PROFILE
+=============================================*/
 .info--profile .info__content {
     display: flex;
     align-items: center;
 }
 
     .info--profile picture {
-        display: block;
+        display: none;
         width: 100px;
         height: 100px;
         min-width: 100px;
@@ -14,6 +178,12 @@
 
         margin-right: 20px;
     }
+
+
+    @media only screen and (min-width: 600px) {
+        .info--profile picture { display: block;}
+    }
+
 
         .info--profile img {
             width: 100%;
@@ -48,6 +218,7 @@
 
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
 
         gap: 16px;
         
@@ -58,6 +229,17 @@
         width: 100%;
     }
     
+    @media only screen and (min-width: 600px) {
+        .profile-details {
+            flex-wrap: nowrap;
+            gap: 6px;
+        }
+
+        .profile-details .list__item {
+            flex-grow: 1;
+            text-align: center;
+        }
+    }
 
         .profile-details .list__item {
             min-width: 80px;
